--- a/back/package.json
+++ b/back/package.json
@@ -7,8 +7,11 @@
 		"start": "nodemon index.js"
 	},
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"joi": "^17.4.0",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.11.17"
 	},
 	"devDependencies": {
