--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,7 @@
 		"express": "^4.17.1",
 		"joi": "^17.4.0",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.11.17"
+		"mongoose": "5.11.15"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.7"
